--- a/Bugs-MNCA/Bugs-MNCA.vcxproj
+++ b/Bugs-MNCA/Bugs-MNCA.vcxproj
@@ -137,6 +137,9 @@
   <ItemGroup>
     <ClCompile Include="Bugs-MNCA.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="fire.glsl" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
