--- a/Bugs-MNCA/Bugs-MNCA.vcxproj.filters
+++ b/Bugs-MNCA/Bugs-MNCA.vcxproj.filters
@@ -19,4 +19,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="fire.glsl">
+      <Filter>Source Files</Filter>
+    </None>
+  </ItemGroup>
 </Project>
