--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 .vs
 *.log
+Bugs-MNCA/x64/Debug/Bugs-MNCA.tlog/unsuccessfulbuild
+Bugs-MNCA/x64/Debug/Bugs-MNCA.tlog/CL.read.1.tlog
+Bugs-MNCA/x64/Debug/Bugs-MNCA.log
