--- a/Bugs-MNCA/Bugs-MNCA.vcxproj.filters
+++ b/Bugs-MNCA/Bugs-MNCA.vcxproj.filters
@@ -20,8 +20,6 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="fire.glsl">
-      <Filter>Source Files</Filter>
-    </None>
+    <None Include="display_fragment.glsl" />
   </ItemGroup>
 </Project>
